[package]
name = "arp-watch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
log = "0.4.19"
notify-rust = "4.8.0"
pnet = "0.33.0"
tokio = { version = "1", features = ["full"] }
tui = "0.19.0"
tui-logger = "0.9.2"
