[package]
name = "arp-watch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
log = "0.4.18"
notify-rust = "4.8.0"
pnet = "0.33.0"
ratatui = { version = "0.21.0", features = ["all-widgets"] }
tui-logger = { version = "0.9.2", features = ["ratatui-support"], default-features = false}
tokio = { version = "1", features = ["full"] }
